static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');

* {
    margin: 0px;
    padding: 0px;
}

*:focus {
    outline: none;
}

html, body {
    overflow-x: hidden;
}

h1 {
    font-weight: 700;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Noto Sans JP', sans-serif;
}

main {
    width: 110%;
}

.navbar-collapse {
    display: -ms-flexbox!important;
    display: flex!important;
    -ms-flex-preferred-size: auto;
    flex-basis: auto;
    margin-left: 30px;
}

.alert {
    margin-bottom: 0px;
}

a{
    text-decoration: none;
    color: #4d555d;
}

.modal-dialog {
    color: black;
}

.modal-body img {
    margin-bottom: 10px;
    width: 100%;
    border-radius: 8px;
}

.space-bg {
    padding-top: 10px;
    background: url('/static/images/space_bg.png') center, radial-gradient(circle at 50%, #eee, #888 40%, #333 75%, #222 95%);
    background-blend-mode: multiply;
    background-position: cover;
    min-height: 102vh;
    height: auto;
    color: whitesmoke;
}

.lets-play-title {
    text-shadow: 0px 1px 5px #585858, 0px 1px 6px #47b613, 0px 1px 7px #eb9545,
    0px 1px 8px #c98c32, 0px 1px 9px #e9e62d, 0px 1px 10px #eb9e45,
    0px 1px 14px #1fe488;
}

.board-set {
    border-radius: 7px;
    height: 50vh;
    font-size: 26px;
    background-color: rgba(46, 248, 204, 0.315);
}

.plane {
    clip-path: polygon(15% 0%, 85% 0%, 100% 100%, 0% 100%);
    background: url('/static/images/nebula.png') center;
    background-size: cover;
    background-blend-mode: multiply;
    box-shadow: 40px 30px 41px 4px rgb(1 1 1) inset;
}

.plane-spacer {
    background-color: #797979;
    height: 10px;
}

.t-row {
    margin-bottom: 2px;
    display: flex;
    justify-content: space-evenly;
    height: 30px;
}

.across-0 {
    padding: 0px 15%;
    margin: 5px 0px 0px;
}

.across-1 {
    padding: 0px 12%;
    margin: 0px 0px;
}

.across-2 {
    padding: 0px 9%;
    margin: 5px 0px;
}

.across-3 {
    padding: 0px 6%;
    margin: 8px 0px;
}

.across-4 {
    padding: 0px 3%;
    margin: 11px 0px;
}

.row-0 {
    margin: 0x;
}

.row-1 {
    margin: 0px;
}

.row-2 {
    margin: 0px;
}

.row-3 {
    margin: 0px;
}

.row-4 {
    margin: 0px;
}

.section {
}

.section-0 {
    width: auto;
}

.section-1 {
    width: auto;
}

.section-2 {
    width: auto;
}

.section-3 {
    width: auto;
}

.section-4 {
    width: auto;
}

.segment {
    width: auto;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0px;
}

.tic-button {
    width: 100%;
    height: 25px;
    min-width: calc(5vw - 13px);
    filter: brightness(0.5);
    border: 1px solid black;
}

.row-0 .tic-button {
    width: calc(3vw - 13px);
    height: 22px;
    min-width: 7px;
    max-width: 38px;
    /* box-shadow: 0px; */
}

.row-1 .tic-button {
    width: calc(3vw - 10px);
    height: 25px;
    min-width: 8px;
    max-width: 47px;
    /* box-shadow: 0px 0px 52px 3px white; */
}

.row-2 .tic-button {
    width: calc(3vw - 7px);
    height: 28px;
    min-width: 9px;
    max-width: 56px;
    /* box-shadow: 0px 0px 52px 3px white; */
}

.row-3 .tic-button {
    width: calc(3vw - 4px);
    height: 31px;
    min-width: 10px;
    max-width: 65px;
    /* box-shadow: 0px 0px 52px 3px white; */
}

.row-4 .tic-button {
    width: calc(3vw - 1px);
    height: 34px;
    min-width: 11px;
    max-width: 74px;
    /* box-shadow: 0px 0px 52px 3px white; */
}

.buttress {
    height: auto;
    width: auto;
    max-height: 38px;
    max-width: 38px;
    background-color: whitesmoke;
}

.comment {
    background-color: #40e0d045;
    padding: 0px 20px;
    border-radius: 4px;
    margin-bottom: 5px;
}

.right-button {
    clip-path: polygon(0% 0%, 70% 0%, 100% 50%, 70% 100%, 0% 100%);
}

.left-button {
    clip-path: polygon(30% 0%, 100% 1%, 100% 100%, 30% 100%, 0% 50%);
}

.r-tic {
    background-color: rgb(255, 103, 82);
    filter: brightness(150%);
}

.b-tic {
    background-color: rgb(49, 104, 255);
    filter: brightness(150%);
}

.yet-to-tic {
    transform: scale(1);
    transition: transform 0.2s ease-in-out;
    box-shadow: 0px;
}

.yet-to-tic:hover {
    transform: scale(1.1);
    box-shadow: 0px 0px 52px 3px white;
    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
    z-index: 3;
}

#edited_message {
    height: 200px;
    width: 100%;
}

.select-label {
    margin-right: 1vh;
}

.board-options {
    bottom: 1vh;
}

.spinner-cont {
    position: absolute;
    height: 110vh;
    margin-left: 47vw;
    background: transparent;
    /* background: url('/static/images/space_bg.png') center, radial-gradient(circle at 50%, #eee, #888 40%, #333 75%, #222 95%);
    background-blend-mode: multiply;
    background-position: cover; */
}

.spinner-border {
    margin-top: 30vh;
    width: 5vw;
    height: 5vw;
}

@media only screen and (min-width: 1200px) {

    .board-set {
        max-height: 430px;
    }

    .space-bg {
        max-height: 1600px;
    }

}

@media only screen and (max-width: 700px) {

    .space-bg {
        height: 194vh;
    }

}

@media only screen and (max-width: 470px) {

    .heading-h1 {
        font-size: 1.8rem;
    }

    .board-set {
        height: 92vh;
    }

}

